# CMakeCourse

./: CMakeLists.txt  clean.sh  conanfile.py  makefile  vcpkg.json
App/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt
Source/MathLib/: CMakeLists.txt  my_mathlib.cpp  my_mathlib.h
cmake/: AddGitSubmodule.cmake  Docs.cmake  LTO.cmake  Sanitizers.cmake  Warnings.cmake
configured/: config.hpp.in
docs/: Doxyfile
tests/: CMakeLists.txt  main.cc
